Add Slide effect for Service part on mobile

--- a/assets/styles/responsive.css
+++ b/assets/styles/responsive.css
@@ -103,6 +103,11 @@
     translate: -99% -102%;
   }
 
+  .feedback__arrow--left,
+  .feedback__arrow--right {
+    display: flex;
+  }
+
   /* FAQ */
   .faq__heading {
     max-width: 400px;
