--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -498,6 +498,9 @@ main > .container {
 }
 
 .project-item__img {
+  min-width: 200px;
+  height: 130px;
+  object-fit: cover;
   transition: scale 0.25s ease;
 }
 
@@ -641,9 +644,8 @@ main > .container {
 
 .stat-video__thumb {
   width: 100%;
-  height: 276px;
+  height: auto;
   opacity: 0.8;
-  object-fit: cover;
   transition: opacity 0.25s ease;
 }
 
@@ -859,6 +861,10 @@ main > .container {
   opacity: 0;
   overflow: hidden;
   transition: height 0.4s ease, opacity 0.4s ease;
+}
+
+.faq-item__answer a {
+  text-decoration: underline;
 }
 
 .faq__toggle-btn {
